--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "php": "^7.1",
         "ext-mbstring": "*",
         "spatie/macroable": "^1.0|^2.0",
-        "symfony/process": "^2.0|^5.3.7|^6.0"
+        "symfony/process": "^2.0|^4.4.44"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
